# custom-tool-deployment

./: .env.example  .gitignore  README.md  standalone-agent-deployment-runbook.md
custom-echo-agent/: Dockerfile  README.md  pyproject.toml
custom-echo-agent/src/custom_echo_agent/: __init__.py  tools.py
deploy/: custom-echo-agent-config.yaml  custom-echo-agent-values.yaml
scripts/: 00_autodeploy_from_package.sh  00_build_image_from_package.sh  01_preflight.sh  02_build_image.sh  03_import_image_to_k3s.sh  04_create_db_bridge_secret.sh  04_create_values.sh  05_deploy_agent.sh  06_verify_agent.sh  07_deploy_from_prebuilt_image.sh  lib.sh
